WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51344
[RTL] WebKit hangs when moving caret in mixed Bidi text
https://bugs.webkit.org/show_bug.cgi?id=51344
Summary
[RTL] WebKit hangs when moving caret in mixed Bidi text
Ryosuke Niwa
Reported
2010-12-20 12:00:31 PST
Created
attachment 77021
[details]
demo This is a variant of the
bug 49111
. Open the attachment and WebKit hangs inside VisiblePosition::rightVisuallyDistinctCandidate: box = nextBox; renderer = box->renderer(); offset = box->caretLeftmostOffset(); if (box->bidiLevel() > level) { do { nextBox = box->nextLeafChild(); } while (nextBox && nextBox->bidiLevel() > level); // we get stuck in this while loop. if (!nextBox || nextBox->bidiLevel() < level) continue; }
Attachments
demo
(402 bytes, text/html)
2010-12-20 12:00 PST
,
Ryosuke Niwa
no flags
Details
patch w/ layout test
(4.34 KB, patch)
2010-12-20 19:59 PST
,
Xiaomei Ji
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xiaomei Ji
Comment 1
2010-12-20 19:59:55 PST
Created
attachment 77076
[details]
patch w/ layout test
Xiaomei Ji
Comment 2
2010-12-20 20:13:50 PST
Committed
r74385
: <
http://trac.webkit.org/changeset/74385
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug