2010-12-20  Xiaomei Ji  <xji@chromium.org>

Reviewed by Dan Bernstein.

        Fix move left/right by character hang.
        https://bugs.webkit.org/show_bug.cgi?id=51344

        Test: editing/selection/51344.html

        * editing/VisiblePosition.cpp:
        (WebCore::VisiblePosition::leftVisuallyDistinctCandidate):
        (WebCore::VisiblePosition::rightVisuallyDistinctCandidate):
2010-12-20  Xiaomei Ji  <xji@chromium.org>

        Reviewed by Dan Bernstein.

        Fix move left/right by character hang.
        https://bugs.webkit.org/show_bug.cgi?id=51344

        * editing/selection/51344-expected.txt: Added.
        * editing/selection/51344.html: Added.


Canonical link: https://commits.webkit.org/64727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74385 268f45cc-cd09-0410-ab3c-d52691b4dbfc